# wsbreporter

./: .env.example  .gitignore  README.md  config.py  daily_update.sh  html_formatter.py  justfile  main.py  output_formatter.py  pyproject.toml  render_report.py  requirements.txt  run.py  start.sh  summarizer.py  test_summary.md
.github/workflows/: deploy.yml
deployments/gcp/: bootstrap.sh  create_instance.sh  setup_cron.sh
docs/: 2026-01-30.html  index.html
examples/: custom_report.html  report_example.md
site/: generate_site.py
site/html/: 2026-01-31.html  catalog.html
site/markdown/: 2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  (+110 more)
templates/: prompt_template.txt  prompt_template_editor.txt  prompt_template_hindsight.txt  prompt_template_hindsight_v2.txt  report_template.html
wsbreporter/: __init__.py  config.py  editor.py  html.py  html_formatter.py  list_models.py  llm.py  main.py  news.py  output_formatter.py  pipeline.py  reddit.py  reddit_client.py  render_report.py  reporter.py  scraper.py  storage.py  summarizer.py  writer.py
(+3 files in other folders)
